# blast-courses

./: .env.public  .gitignore  Dockerfile  README.md  README_START.md  entrypoint.sh  manage.py  pyproject.toml
blast_courses/: asgi.py  exceptions.py  settings.py  urls.py  wsgi.py
courses/: models.py  serializers.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_initial.py
templates/: google_auth.html
users/: models.py  serializers.py  urls.py
users/endpoint/: views.py
users/endpoint/google/: google_views.py
users/migrations/: 0001_initial.py  0002_alter_user_user_type.py
users/permissions/: is_author.py
users/services/: base_auth.py  google.py  renders.py
